# bagscolator

./: .buildlog  .gitignore  Anchor.toml  README.md  idl_dump.txt  package.json  parse_idl.js
dashboard/: .env.example  package.json  tailwind.config.ts
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: StatsPanel.tsx
dashboard/src/lib/: program.ts
keeper/: .env.example  package.json
keeper/src/: config.ts  executor.ts  index.ts  monitor.ts
programs/bagscolator/: Cargo.toml
programs/bagscolator/src/: constants.rs  errors.rs  lib.rs  state.rs
programs/bagscolator/src/instructions/: deposit_fees.rs  execute_buyback.rs  initialize.rs  mod.rs  update_config.rs
tests/: bagscolator.ts
