[package]
name = "bagscolator"
version = "0.1.0"
description = "Deflationary launch primitive — auto-buyback and permanent lock for culture coins"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "bagscolator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
